# UG-ComputerGraphics-24

./: .gitignore  CMakeLists.txt  README.md  main.cpp
res/shaders/: basic.shader
