cmake_minimum_required(VERSION 3.28)
project(ComputerGraphics)

set(CMAKE_CXX_STANDARD 20)

find_package(glfw3 3.4 REQUIRED)

add_executable(ComputerGraphics main.cpp)

target_link_libraries(ComputerGraphics glfw)

# Link OpenGL (needed on Windows and Linux)
if (WIN32)
    target_link_libraries(${PROJECT_NAME} opengl32)
elseif(APPLE)
    find_library(OpenGL_LIBRARY OpenGL)
    target_link_libraries(${PROJECT_NAME} ${OpenGL_LIBRARY})
else()
    find_package(OpenGL REQUIRED)
    target_link_libraries(${PROJECT_NAME} OpenGL::GL)
endif()